--- a/Com.ChatR.MsSqlProvider/Com.ChatR.MsSqlProvider.csproj
+++ b/Com.ChatR.MsSqlProvider/Com.ChatR.MsSqlProvider.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ChatModel.cs" />
     <Compile Include="ChatManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserAccount.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
