--- a/Com.ChatR.Web/package.json
+++ b/Com.ChatR.Web/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "react-chat",
+  "name": "chatr",
   "version": "1.0.0",
-  "description": "",
-  "main": "Default.aspx",
+  "description": "A chat application using React, SignalR and ASP.Net webapi.",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nitij",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davidsekar/ChatR.git"
+  },
+  "keywords": [
+    "chat",
+    "react",
+    "signalr",
+    "asp.net",
+    "webapi"
+  ],
+  "author": "David Gnanasekaran",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/davidsekar/ChatR/issues"
+  },
+  "homepage": "https://github.com/davidsekar/ChatR#readme",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-react": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3",
-    "jshint": "^2.9.1",
-    "react": "^0.14.7"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "react-draggable": "^2.2.1"
   }
 }
