--- a/Com.ChatR.Web/packages.config
+++ b/Com.ChatR.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="Autofac.Mvc5.Owin" version="3.1.0" targetFramework="net461" />
@@ -16,6 +17,7 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
@@ -32,4 +34,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
