React router included StoreJs included New user registration route added Wildcard mapping gor chat folder added for using BrowserHistory

--- a/Com.ChatR.Core/Com.ChatR.Core.csproj
+++ b/Com.ChatR.Core/Com.ChatR.Core.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dtos\ChatUserDto.cs" />
+    <Compile Include="Dtos\RegisterInfoDto.cs" />
     <Compile Include="UserAccountManager.cs" />
     <Compile Include="ChatManager.cs" />
     <Compile Include="ChatRHub.cs" />
