--- a/Com.ChatR.Models/Com.ChatR.Models.csproj
+++ b/Com.ChatR.Models/Com.ChatR.Models.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ChatParticipants.cs" />
     <Compile Include="ChatRooms.cs" />
     <Compile Include="ChatUser.cs" />
+    <Compile Include="CustomResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
