--- a/Com.ChatR.MsSqlProvider/Com.ChatR.MsSqlProvider.csproj
+++ b/Com.ChatR.MsSqlProvider/Com.ChatR.MsSqlProvider.csproj
@@ -53,8 +53,21 @@
   <ItemGroup>
     <Compile Include="ChatModel.cs" />
     <Compile Include="ChatManager.cs" />
+    <Compile Include="ChatModelInitializer.cs" />
+    <Compile Include="Migrations\201608251717360_InitialCreate.cs" />
+    <Compile Include="Migrations\201608251717360_InitialCreate.Designer.cs">
+      <DependentUpon>201608251717360_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609031603083_initial_Setup.cs" />
+    <Compile Include="Migrations\201609031603083_initial_Setup.Designer.cs">
+      <DependentUpon>201609031603083_initial_Setup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609050442415_User Email Unique.cs" />
+    <Compile Include="Migrations\201609050442415_User Email Unique.Designer.cs">
+      <DependentUpon>201609050442415_User Email Unique.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserAccount.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -69,6 +82,17 @@
       <Project>{d29c8b0e-4e1f-4031-a21b-371fb22c8597}</Project>
       <Name>Com.ChatR.Repository</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201608251717360_InitialCreate.resx">
+      <DependentUpon>201608251717360_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609031603083_initial_Setup.resx">
+      <DependentUpon>201609031603083_initial_Setup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609050442415_User Email Unique.resx">
+      <DependentUpon>201609050442415_User Email Unique.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
