--- a/Com.ChatR.Web/package.json
+++ b/Com.ChatR.Web/package.json
@@ -30,6 +30,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "react-draggable": "^2.2.1"
+    "react-draggable": "^2.2.1",
+    "react-router": "^2.7.0",
+    "store": "^1.3.20"
   }
 }
