--- a/Com.ChatR.Web/package.json
+++ b/Com.ChatR.Web/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "react-draggable": "^2.2.1",
+    "react-progress-bar-plus": "^1.2.0",
     "react-router": "^2.7.0",
     "store": "^1.3.20"
   }
