Modify exclude typings folder

--- a/Com.ChatR.Web/Com.ChatR.Web.csproj
+++ b/Com.ChatR.Web/Com.ChatR.Web.csproj
@@ -35,7 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ExcludeFoldersFromDeployment>typings;</ExcludeFoldersFromDeployment>
+    <ExcludeFoldersFromDeployment>typings</ExcludeFoldersFromDeployment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
